<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.login.LoginFragment"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_email"
                android:paddingStart="12dp"
                android:paddingEnd="44dp"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                style="@style/EditTextStyle"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:layout_height="60dp"
                android:singleLine="true"
                android:background="@drawable/sp_login_edittext"
                android:hint="@string/email"
                android:maxLines="1"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/iv_clear_email"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_clear"
                android:contentDescription="@string/clear_input" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_email"
            android:layout_marginTop="16dp"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                style="@style/EditTextStyle"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:drawableStart="@drawable/ic_password"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="44dp"
                android:maxLength="18"
                android:background="@drawable/sp_login_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:autofillHints="password" />

            <ImageView
                android:id="@+id/iv_eye_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_eye"
                android:contentDescription="@string/display_password" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_panel"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password">

            <CheckBox
                android:id="@+id/cb_keep_login"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remember_me"
                android:buttonTint="@color/themeMainColor"
                android:textColor="@color/firstInsTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_forgetPsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="5dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/firstInsTextColor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cl_panel"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/themeMainColor"
            android:textColor="@color/secondTextColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_below="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_alignParentEnd="true"
            android:text="@string/to_register"
            android:layout_marginEnd="15dp"
            android:textColor="@color/firstInsTextColor"/>

        <LinearLayout
            android:id="@+id/ll_divider"
            android:layout_marginTop="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_to_register"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

            <TextView
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/firstInsTextColor"
                android:text="@string/third_party_login"/>

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/lineColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/ll_divider"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_qq_login"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_qq"
                android:contentDescription="@string/login_with_qq" />

            <ImageView
                android:id="@+id/iv_wechat_login"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_wechat"
                android:contentDescription="@string/login_with_wechat" />

            <ImageView
                android:id="@+id/iv_weibo_login"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_weibo"
                android:contentDescription="@string/login_with_weibo" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>