<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".ui.fragment.register.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:id="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="44dp"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                android:background="@drawable/sp_login_edittext"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:maxLines="1"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"  />

            <ImageView
                android:id="@+id/iv_clear_email"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_clear"
                android:contentDescription="@string/clear_input" />

            <ImageView
                android:id="@+id/iv_correct_email"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_correct"
                android:contentDescription="@string/input_correct" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_vercode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_email"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_vercode"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/vercode"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_vercode"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                android:drawablePadding="12dp"
                android:background="@drawable/sp_login_edittext"
                android:paddingStart="12dp"
                android:paddingEnd="100dp"
                android:maxLength="6"
                android:maxLines="1"
                android:inputType="number"
                android:autofillHints="verCode" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:gravity="center"
                android:background="@color/trans"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_vercode"
                    android:layout_width="80dp"
                    android:layout_height="36dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/themeMainColor"
                    android:contentDescription="@string/send_vercode"
                    android:stateListAnimator="@null"
                    android:text="@string/send"
                    android:textColor="@color/secondTextColor"
                    app:cornerRadius="18dp" />

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_vercode"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/themeMainColor"
            android:textColor="@color/secondTextColor"
            android:layout_centerHorizontal="true"
            android:stateListAnimator="@null"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/verify"
            android:textSize="18sp" />

        <RelativeLayout
            android:visibility="gone"
            android:orientation="horizontal"
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_verify"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableStart="@drawable/ic_password"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="44dp"
                android:background="@drawable/sp_login_edittext"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:autofillHints="password"/>

            <ImageView
                android:id="@+id/iv_eye_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_eye"
                android:contentDescription="@string/display_password" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_check_password"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="5dp">

            <EditText
                android:id="@+id/et_check_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableStart="@drawable/ic_password_check"
                android:textColorHint="@color/secondInsTextColor"
                android:textColor="@color/firstInsTextColor"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="44dp"
                android:background="@drawable/sp_login_edittext"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:autofillHints="password" />

            <ImageView
                android:id="@+id/iv_eye_check_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_eye"
                android:contentDescription="@string/display_password" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/bt_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_check_password"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/themeMainColor"
            android:textColor="@color/secondTextColor"
            android:layout_centerHorizontal="true"
            android:stateListAnimator="@null"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/set_password"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="9dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/bt_set_password">

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_retype_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.7"
                android:gravity="end"
                android:text="@string/retype_email"
                android:singleLine="true"
                android:layout_marginEnd="5dp"
                android:textColor="@color/firstInsTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>